--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 title: "Carte Noire"
 email: jacob@jacobtomlinson.co.uk
 description: "A dark blog theme for Jekyll."
-baseurl: "thuban"
-url: "https://nicogito.github.io/"
+baseurl: ""
+url: "https://nicogito.github.io/thuban"
 title_description: "A dark blog theme for Jekyll focusing on a clear reading experience. Large text and a narrow body makes carte noire a gorgeous read. With excellent code snippet support and integrated tools such as AddThis and Disqus giving your Jekyll blog all the functionality your users expect."
 title_image: "https://www.gravatar.com/avatar/00000000000000000000000000000000?s=500&d=mm"
 google_analytics:
 disqus_account: cartenoire
-github_repository: https://github.com/Nicogito/thuban
+github_repository: "https://github.com/Nicogito/thuban/"
 addthis_id: ra-513c6fa83da6ec67
 post_limit: 5
 
